ensured test icon only shows up on mobile

--- a/component/layout.module.css
+++ b/component/layout.module.css
@@ -21,6 +21,10 @@
    display: none;
 }
 
+.showOnMobile {
+   display: none;
+}
+
 @media screen and (max-width: 480px) {
    .navbar {
       display: flex;
@@ -39,5 +43,9 @@
       display: block;
       background-color: #30303a;
       color: #fae4e5;
+   }
+
+   .showOnMobile {
+      display: block;
    }
 }
